# django-admin

./: README.md  db.sqlite3  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
bookstore/: admin.py
core/: settings.py  urls.py
